# obs-package-update

./: .buildinfo  README.rst  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci.yml
source/: api.rst  conf.py  index.rst
src/obs_package_update/: __init__.py  submitrequest.py  update.py  util.py
test/: test_submitrequest.py  test_util.py
