[tool.poetry]
name = "obs-package-update"
version = "0.0.1"
description = "Python library to automatically update packages in the Open Build Service via osc"
authors = ["Dan Čermák <dcermak@suse.com>"]
license = "GPL-2.0-or-later"
packages = [
    { include = "obs_package_update", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.961"
pytest = "^7.1.3"
pytest-asyncio = "^0.18.3"
Sphinx = "^5.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
