[tool.poetry]
name = "obs-package-update"
version = "0.0.1"
description = "Python library to automatically update packages in the Open Build Service via osc"
authors = ["Dan Čermák <dcermak@suse.com>"]
license = "GPL-2.0-or-later"
packages = [
    { include = "obs_package_update", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = "^22.1"

[tool.poetry.dev-dependencies]
Sphinx = ">=5.0"
black = ">=22.3.0"
mypy = ">=0.961"
pytest = ">=7.1.2"
pytest-asyncio = ">=0.18.3"
pytest-mock = ">=3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
